RESOLVED FIXED275465
[Site Isolation] Fix file open panels
https://bugs.webkit.org/show_bug.cgi?id=275465
Summary [Site Isolation] Fix file open panels
Charlie Wolfe
Reported 2024-06-13 18:47:15 PDT
...
Attachments
Charlie Wolfe
Comment 1 2024-06-13 18:47:17 PDT
Charlie Wolfe
Comment 2 2024-06-13 18:55:30 PDT
EWS
Comment 3 2024-06-14 16:40:03 PDT
Committed 280042@main (267386a0cc1c): <https://commits.webkit.org/280042@main> Reviewed commits have been landed. Closing PR #29802 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.