[Site Isolation] Fix file open panels https://bugs.webkit.org/show_bug.cgi?id=275465 rdar://128979437

Reviewed by Aditya Keerthi.

When a file panel is opened, the selected file should be sent to the process that opened the panel. Store
a weak pointer to the process that opened the file on `WebOpenPanelResultListenerProxy`.

* Source/WebKit/UIProcess/WebOpenPanelResultListenerProxy.cpp:
(WebKit::WebOpenPanelResultListenerProxy::WebOpenPanelResultListenerProxy):
(WebKit::WebOpenPanelResultListenerProxy::invalidate):
* Source/WebKit/UIProcess/WebOpenPanelResultListenerProxy.h:
(WebKit::WebOpenPanelResultListenerProxy::create):
(WebKit::WebOpenPanelResultListenerProxy::process const):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::runOpenPanel):
(WebKit::WebPageProxy::didChooseFilesForOpenPanel):
(WebKit::WebPageProxy::didCancelForOpenPanel):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::siteIsolatedViewAndDelegate):
(TestWebKitAPI::TEST(SiteIsolation, RunOpenPanel)):
(TestWebKitAPI::TEST(SiteIsolation, CancelOpenPanel)):
* Tools/TestWebKitAPI/cocoa/TestUIDelegate.h:
* Tools/TestWebKitAPI/cocoa/TestUIDelegate.mm:
(-[TestUIDelegate webView:runOpenPanelWithParameters:initiatedByFrame:completionHandler:]):

Canonical link: https://commits.webkit.org/280042@main